#general c++ compiling rule
myldadd = compton.o block.o randomInit.o -lgomp
AM_CPPFLAGS = -fomit-frame-pointer -fexpensive-optimizations -fopenmp
#AM_LDFLAGS = -Wl,-O1 -Wl,--as-needed
bin_PROGRAMS = CPassThrough CPassThrough2D CRefBuried CPTBrutal binMatrix plotCPT CRefBackground gixos CRefBuriedSizeEffect
CRefBuried_SOURCES = CRefBuried.cpp
CRefBuried_LDADD =  $(myldadd)
CRefBuriedSizeEffect_SOURCES = CRefBuriedSizeEffect.cpp
CRefBuriedSizeEffect_LDADD =  $(myldadd)
CPassThrough_SOURCES = CPassThrough.cpp
CPassThrough_LDADD = $(myldadd)
CPassThrough2D_SOURCES = CPassThrough2D.cpp
CPassThrough2D_LDADD = $(myldadd)
CRefBackground_SOURCES = CRefBackground.cpp
CRefBackground_LDADD = $(myldadd)
gixos_SOURCES = gixos.cpp
gixos_LDADD = $(myldadd)
CPTBrutal_SOURCES = CPTBrutal.cpp
CPTBrutal_LDADD =  compton.o blockBrutal.o randomInit.o
binMatrix_SOURCES = binMatrix.cpp
plotCPT_SOURCES = plotCPT.cpp
plotCPT_LDADD = mcd.o
include_HEADERS=compton.h block.h
